[metadata]
name = treequeues
version = 0.1.0
description = High performance queues for pytree objects.
author = Thomas Hirtz
author_email = thomashirtz@pm.me
license = MIT
license_file = LICENSE

[options]
packages = find:
install_requires =
    dm-tree
    numpy
    setuptools

[options.packages.find]
exclude =
    benchmark.py
